@@ -19,12 +19,14 @@ DIST gitlab-ce-8.14.0_rc4.tar.gz 30101713 SHA256 667cccc428d20d241a19bb554eb5176
 DIST gitlab-ce-8.14.1.tar.gz 29715000 SHA256 81c5b9019fba31546ce414424a567a999783be0d5ab0ae865c5576073e864bae SHA512 780040ea9764dbadddcd9c8cbbb743e4b101d5da3fdbd792b6da3dced26179884bb348323c75888040b45231f091605246ccaa6af17f79e2aefb0931bbf32a47 WHIRLPOOL dd23ae35a67f1cdca76f671b96ab6dd8f5b7782e3e43da0e63872a0842098da8e2dbcf6515a8c43a1f1fdb0949a8ce19d31148b50b198fb4054f32285f914690
 DIST gitlab-ce-8.14.2.tar.gz 29715506 SHA256 9d45a0a86c6b01e0c48e7fe2fc442fe774f062b8b149f1d697c38aa29f6c3a25 SHA512 f65d12eafc397c5146264615ae384721165bd11498adf02f34c3fa65e55ac0b20d16d14d78455d46454c14bd0f075dedd627d5940853bfb99143c52d4d8c4194 WHIRLPOOL 44a9daf2dc4aea80e84a44fe45d085600ef463b5346417f36c4fd550749bba4599e328f43485317dadbbdab2fca6fef56c91cc41ea6156eeb797671e7416bc7f
 DIST gitlab-ce-8.14.3.tar.gz 29717697 SHA256 df0b57646af534a874128d6e1903cee215c093a3c6302315cc53a9bddf62582e SHA512 9c7c58d0c6c7df447b0f723c550cb95530e781cf75b915b49e098dc0742cc18dc47e665cfa228dc2867ac5cc4dc40d62b6544d0160738a596d2331628c80304c WHIRLPOOL d96e9cbcbee48ce5f6ceff88756ad7493c0b5a3111ff072996541e5b650f0feb727eceab5e0859873b68d6248d790c4dacb8bc9e2d1f288936fc102de1410052
+DIST gitlab-ce-8.14.4.tar.gz 29719940 SHA256 32c8e66e3c5f820874548c0ceab0215a567ca7b58a9ea604adc63878f50f8307 SHA512 426faaa4a4f18e9462d2153f031db8394465581638d259e6e0282a2bfe6c72c8738ca0dc084969f414e61a362bc5792656a07b33592a7f880307613fc152f8ae WHIRLPOOL f3f3a012f26a5a3dcdc5214b039128280e75ddf885b71fdacec13119cc6229dd771db0186b8fb04c5f761e62cf5962867570c6c4bfd47eecca57f1665521b220
 EBUILD gitlab-ce-8.13.6.ebuild 11979 SHA256 761411082e2e68f432f913f5c5c969847832d335b1f7843575890ba125542539 SHA512 ab01af577da7a27cee3308c6766a042edbce7f1c472639b9a24b9bef3a7ce37389dd8e32b43cf62b9ce7c20399ccf17fd35f678ea63598b4b06890bfeabded50 WHIRLPOOL cc14b981521f0513108ab4320f2e3d4f210ec0da7373f0f99b35d975003b5e1ff5783c5db5c6b7f29739e795fc73d4744716f81056039eefaf445354bd7cb000
 EBUILD gitlab-ce-8.14.0.ebuild 12058 SHA256 ef9893f42bf74b6864d5647c406afb69412cfa88ab89fa3bbc8a69d92f6eabe9 SHA512 182be258e2ede41a056d0ecc6c8691dc89af035474b711c74887b61105e1260fd0cc02556931e713cc256766a8879356ea07ce7bb9aa8f463eedf63925afe52e WHIRLPOOL 69c12e67507d5f27bf5491d06a1f0de7e0bc156b624008977f7150b623728e255ebdcecb100aa3133dc8063f7bdfb5586c0924fa3077c1141090719666d1cb76
 EBUILD gitlab-ce-8.14.0_rc4.ebuild 11956 SHA256 d6e509c5e9de4c361f04a8c76d0e87b947c5416bc6222e716d368cd82cd55df3 SHA512 58d8862ccb1d09b05bc880fa36d6d3936d1d666537da395817e794b7410fba0df1afc136a6e2bebd6d29b2bf16ef8cd95ac3130e6f35b678c543f7e0e552810a WHIRLPOOL a348a04316fa46da98816ea6a51b641aae68b13b513cfd445b002d2a6180786cf0fd5fdfcf0420ceec8de7a090b01f4009334fe5618c47813b40f0baed8360da
 EBUILD gitlab-ce-8.14.1.ebuild 12058 SHA256 95df987cfcc654adfff434916f3b3c093bd363f147ce732f2712923c38c6cea1 SHA512 7aac8dd78a3d25eb6a3664f7818188d89dea015cfb88f37c5d54597b9e0351f208d82a96488ec0109769d59b264d0a81f4656e3e95b63fe1ac99290879f28497 WHIRLPOOL 683ca7f8b32b89ebc3f503481ef6891dea756297f4a474efb62791f5b0bfd3e5287498bc0f78b73592b1c1cc8ce7ec67748a439399c601992f300dfcbe190560
 EBUILD gitlab-ce-8.14.2.ebuild 12058 SHA256 d3ceac76fde85644bae8524b94e29c484a125aa3bb5e55cd4ffe0d738e0e2e90 SHA512 c47d3a69ba675a8f6637a229b1fc65a4c0c6c00c6532ecc06d32f332129cfea8b89c6267bf9110e449c3fe20487be8a0d627fac06f19ab2824e8b161598e8e6e WHIRLPOOL 4a394a334e1ba27d6438cf351b54d83324210b39d0d6d3707828fd48413e2258314b80507136bc09764568c479814d5b1b6cf30b40b64a80b29a3506c256f4da
 EBUILD gitlab-ce-8.14.3.ebuild 12058 SHA256 c495099e43d677041f197e70c051ba2e5541b600d8e65a9bfc17de44bd46195a SHA512 bf50743972034453cb3d63563589e768ef2c394e6a119b34ca55b17ff03d34f98d85a09e3411090bee4a821f505a35ac9ea1c89c6fdd241c395b71c8daf671a4 WHIRLPOOL cedad6cb34a050bc052c3827a3f6e95cb5e68346fa3da2a77e7cceabe0b194abc545a5ffef6441e00f55be0d4a701dcab63a0b0907cb81529fd20d34403fb066
+EBUILD gitlab-ce-8.14.4.ebuild 12058 SHA256 8f856b037e7f6b299e24725dcc972bd83a0758f7f4d79972eb446a931c240614 SHA512 30c304448c208e20da70dbb4300150aa494a2d4b00e2bf3db6897b1b3c13834ece0a186f29917e05765ac7833be79e13a2513a56705a51351ece6b50ca87d68d WHIRLPOOL e188d79b0322cd6433529ef6d8d157cd09a96c36d6f8161412b2c41c07aabec047acda0e5b7ee8741ea4aa526824dd17e9c823072aeaf584fd6a6dd49e4d8bfd
 EBUILD gitlab-ce-9999.ebuild 11913 SHA256 f6e02b9e122033339874bce07dd4b1663a8b3dee9ad86e5793a9dbf7517e78b6 SHA512 43943fc250c810f131bdcfef518373b12bb997b84c12d5ee50b3006ddc9a7df4541a08faf2ea35dcd56ad70a7fd3d5dfc17c529b30df99c426d6418c3e5ee051 WHIRLPOOL ff7cf1a2a82545f16e2c7804ace0a8b2d00acab24233afe293668ab7573131065e1b301979d87563dd235a9fb4bebd3156aa9bddcb547cfb1b837103273686f5
-MISC ChangeLog 11492 SHA256 5283e1bb479fab887c33d8762ae976b85cbc77e497764bd853507ded40ea9286 SHA512 2e70bc45e6a7e073a170b5386eb3d40cda153d9a9c1524e1a2aca1c70c0bcd7a4c65d97c24711234466d7be0c85c987e43c47940e15aa55b4e5415303da15ea2 WHIRLPOOL 1e3a5742d95f35772a8b81b3b2ec560b778af61c0bd9fa3139fed7ddd86636e4b8a5b1e0f1ecb0bdfd395f7f83bae56798d8a653e98190966043b69adbfe39b6
+MISC ChangeLog 11683 SHA256 5781fb5a5f1174b5006f3b5b83840207d927506821969fbf1d332beea83d1e45 SHA512 d9419ae3bf601730ee8df2440f6d28364b89cce38488fcd60facae4fe7045b8361e5b234be8bb198eca1be66211c9976de312b76418ee95aeb6f13ff5f7b077a WHIRLPOOL 80f14591671a0cb8e8d13da15fc2ad87122f1d2a81cca05e1058756ae23f7f0467934d932adef7423ed523ccb49e1888aaaad29f46a915107f5df440700ad54a
 MISC metadata.xml 559 SHA256 6c3f48d3ef57c97bf27790f33ee04bd8de8b01597caa8a2a7a473d6d0a3c5759 SHA512 5aa340b5429795d84cd106ee673fd55a42fd4b0d3299d6b95c6a3e3d50812a9620820a4de5c57d5048af0c3ecec7f575d5856d2f7fadc210aadcbdd4dd040fe1 WHIRLPOOL f3d7b8c0522e09f5156e6bb446bb74e4c75f5da4495ca2ece1eb78afce59307abe01bf3c5dd5344278fcac9e334300d912031c806f51b981591c01bc3588c6f3
