@@ -1,3 +1,8 @@
+*gitlab-ce-8.14.4 (12 Dec 2016)
+
+  12 Dec 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.14.4.ebuild:
+  www-apps/gitlab-ce:  added ebuild for gitlab-ce-8.14.4, latest bugfix release
+
 *gitlab-ce-8.14.3 (08 Dec 2016)
 
   08 Dec 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.14.3.ebuild:
